# SimpleBlockchainRust

./: README.md
blockchain/: Cargo.toml
blockchain/src/: main.rs
blockchain/src/blockchain/: chain.rs
blockchain/src/server/: server.rs
