[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
actix-web = "4.3.0"
actix-rt = "2.7.0"


